--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  go-test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: '1.23'
 
     - name: Install dependencies
       run: go mod download
